# hospital_stay_exercise

./: README.md  pyproject.toml  solution.ipynb
